--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nirah | Portfolio</title>
+  <title>Nirah's | Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
@@ -174,7 +174,7 @@
   <section class="hero" id="home">
     <div class="hero-content">
       <div class="hero-left">
-        <p>Web Developer</p>
+        <p>Frontend Developer & UI/UX Designer</p>
         <h2>Hello, I'm <span class="hero-name">Nirah Ngala</span></h2>
         <p class="bio">
           I build modern digital solutions that solve real-world problems and elevate user experience. I'm passionate about web tech, design, and clean code.
